# MlopsProject

./: .flake8  .pre-commit-config.yaml  README.md  infer.py  mlflow_config.toml  pyproject.toml  train.py
.dvc/: config
.github/workflows/: pre-commit.yml
conf/: config.yaml
data/: .gitignore  X_test.h5
models/: model.h5
outputs/2023-12-24/17-08-54/.hydra/: hydra.yaml
outputs/2023-12-24/17-13-56/.hydra/: hydra.yaml
outputs/2023-12-24/17-14-51/.hydra/: hydra.yaml
outputs/2023-12-24/17-15-10/.hydra/: hydra.yaml
outputs/2023-12-24/18-03-57/.hydra/: hydra.yaml
outputs/2023-12-24/18-04-39/.hydra/: hydra.yaml
outputs/2023-12-24/18-05-09/.hydra/: hydra.yaml
outputs/2023-12-24/18-05-54/.hydra/: hydra.yaml
outputs/2023-12-24/18-08-34/.hydra/: hydra.yaml
outputs/2023-12-24/18-09-02/.hydra/: hydra.yaml
outputs/2023-12-24/18-10-21/.hydra/: hydra.yaml
outputs/2023-12-24/18-37-23/.hydra/: hydra.yaml
outputs/2023-12-24/18-38-12/.hydra/: config.yaml  hydra.yaml
source/: train.py
source/outputs/2023-12-24/17-01-20/.hydra/: hydra.yaml
